# Oh-My-God

./: .gitignore  README.md  config.yaml  environment.yml  requirements.txt  setup.py  wiki.md
dna_ai/: CMakeLists.txt  wiki.md
dna_ai/shadcn-ui/: Makefile  README.md  ai_engine.cpp  ai_engine.py  api_server.py  app.js  general_ai_assistant.py  index.html  package.json  pnpm-lock.yaml  requirements.txt  restrictions.json  setup.py  styles.css  todo.md  universal_ai_engine.py
dna_ai/shadcn-ui/.ragatouille/colbert/indexes/code_knowledge_base/: 0.codes.pt  0.metadata.json  0.residuals.pt  avg_residual.pt  buckets.pt  centroids.pt  collection.json  doclens.0.json  ivf.pid.pt  metadata.json  pid_docid_map.json  plan.json
dna_ai/shadcn-ui/src/: index.css  main.tsx
dna_ai/src/: kmer_model.cpp  kmer_model.hpp  main.cpp
dna_ai/tests/: gc_content_test.cpp  kmer_model_test.cpp
jules-scratch/verification/: verify_chat.py
src/: __init__.py  align.py  annotate.py  cli.py  qc.py  report.py
src/explain/: __init__.py  build_index.py  retriever.py  summarizer.py  templates.py
streamlit_template/: .gitignore  README.md  app.py  config.yaml  dockerfile  environment.yml  requirements.txt  setup.py  todo.md
streamlit_template/src/: __init__.py  align.py  call_variants.py  cli.py  disease_risk.py  enhanced_report.py  filter_variants.py  mthfr.py  pharmacogenomics.py  qc.py  report.py  rna.py
streamlit_template/src/core/: genome_ai.cpp
streamlit_template/src/explain/: build_index.py  retriever.py  summarizer.py  templates.py
